--- a/src/index.css
+++ b/src/index.css
@@ -79,12 +79,18 @@ a.active {
   padding: 0 2rem 0 2rem;
 }
 
+@font-face {
+  font-family: HankenGrotesk;
+  src: url("assets/fonts/HankenGrotesk-VariableFont_wght.ttf") format('truetype');
+}
+
 .body {
   display: flex;
   justify-content: center;
   width: 100%;
   height: 100vh;
   align-items: center;
+  font-family: HankenGrotesk;
 }
 
 .body-card {
@@ -96,6 +102,33 @@ a.active {
 }
 
 .result-card {
+  color: white;
   background-color: #4a36f3;
-  width: 50%
+  width: 50%;
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  /* justify-content: center; */
+  align-items: center;
+}
+
+.result-card p {
+  margin: 20px
+}
+
+.total-score {
+  background-color: #4924cc;
+  width: 160px;
+  height: 160px;
+  border-radius: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+
+}
+
+.summary-card {
+  width: 350px
 }
